Icon collapse and padding issue resolved

--- a/style.css
+++ b/style.css
@@ -137,12 +137,13 @@
     margin-bottom: 50px;
 }
 .infoicon{
-    margin-top: 10px;
+    padding-top: 30px;
+    margin-top: 100px;
     color: #7a7ffb;
     font-size: 15px;
 }
-.blackicon{
-    color: black;
+.infomarg{
+    margin-top: 15px;
 }
 .statsblock{
  
